--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "dayjs": "^1.11.13",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
+    "expo-media-library": "^17.1.7",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
